k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nagp-k8s
  labels:
    app: nagp-assignment
    environment: production
