k8s/08-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: nagp-k8s
  labels:
    app: nagp-assignment
    tier: api
spec:
  # ClusterIP — traffic comes in from Ingress, not directly from outside
  type: ClusterIP
  selector:
    app: nagp-assignment
    tier: api
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
